--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ sentence-transformers==2.2.2
 nltk==3.8.1
 fpsample==0.3.2
 volumentations==0.1.8
-charset-normalizer-3.4.2
+charset-normalizer==3.4.2
 jsonlines
 open3d
 hydra
