保存更改路径

--- a/configs/embodied-pq3d-final/embodied_scan_instseg_cyh.yaml
+++ b/configs/embodied-pq3d-final/embodied_scan_instseg_cyh.yaml
@@ -23,7 +23,7 @@ logger:
 
 # dataset details
 data:
-  train: ['EmbodiedScanInstSegHM3D', 'EmbodiedScanInstSegScanNet']
+  train: ['EmbodiedScanInstSegScanNet']
   val: ['EmbodiedScanInstSegScanNet']
   test: ['EmbodiedScanInstSegScanNet']
 
@@ -53,8 +53,10 @@ data:
     load_frame_interval: 1
     val_load_scan_max_num: 10
 
+  
+
   scene_verse_base: /hdd/caoyuhao/3D_data/g3d-lf/SceneVerse
-  embodied_base: /hdd/caoyuhao/3D_data/MTU3D/embodied_scan
+  embodied_base: /hdd/caoyuhao/3D_data/g3d-lf/SceneVerse
 
 # dataloader details
 dataloader:
