--- a/vle_collection/requirements.txt
+++ b/vle_collection/requirements.txt
@@ -1,9 +1,10 @@
 opencv-python
 omegaconf
 numba
-ultralytics
+numpy==1.23.5
 tqdm
 numpy-quaternion
 attrs
 scipy
 scikit-learn
+gym-notices==0.0.8
