准备把MTU3D搞成R2R的

--- a/configs/embodied-pq3d-final/embodied_scan_instseg.yaml
+++ b/configs/embodied-pq3d-final/embodied_scan_instseg.yaml
@@ -89,6 +89,7 @@ solver:
 
 eval:
   name: EmbodiedScanInstSegEvalEmpty
+  dataset_name: 
   pass_kwargs: True
   save: False
   ignore_label: ${data.instseg_options.ignore_label}
