--- a/configs/embodied-pq3d-final/embodied_scan_instseg_cyh.yaml
+++ b/configs/embodied-pq3d-final/embodied_scan_instseg_cyh.yaml
@@ -59,7 +59,7 @@ data:
     val_load_scan_max_num: 10
 
   scene_verse_base: /hdd/caoyuhao/3D_data/g3d-lf/SceneVerse
-  embodied_base: /hdd/caoyuhao/3D_data/MTU3D/embodied_scan
+  embodied_base: /hdd/caoyuhao/3D_data/MTU3D/embodied_scan_ERADIO
 
 # dataloader details
 dataloader:
@@ -127,7 +127,7 @@ model:
   mv_encoder:
     name: ObjectEncoder
     args:
-      input_feat_size : 1024
+      input_feat_size : 1536 #CLIP:1024 RADIO:1536
       hidden_size: ${model.hidden_size}
       use_projection: True
       use_cls_head: False
