--- a/configs/sonata_exp/sonata.yaml
+++ b/configs/sonata_exp/sonata.yaml
@@ -1,5 +1,5 @@
 # Experiment general info
-name: "VISION_ENCODER_DINOv2"
+name: "SONATA_ENCODER"
 base_dir: "outputs"
 exp_dir: ""
 note: ""
@@ -26,10 +26,10 @@ data:
   train_split: '/hdd/caoyuhao/VLN_ws/3D_data_tools/meta_data/scannetv2_train_200.txt'
   val_split: '/hdd/caoyuhao/VLN_ws/3D_data_tools/meta_data/scannetv2_val_20.txt'
   # train: ['EmbodiedScanInstSegHM3D', 'EmbodiedScanInstSegScanNet']
-  train: [ 'EmbodiedScanInstSegScanNet']
+  train: [ 'EmbodiedScanInstSegScanNetSPconv']
 
-  val: ['EmbodiedScanInstSegScanNet']
-  test: ['EmbodiedScanInstSegScanNet']
+  val: ['EmbodiedScanInstSegScanNetSPconv']
+  test: ['EmbodiedScanInstSegScanNetSPconv']
 
   load_all_dataset_once: False
 
@@ -62,18 +62,18 @@ data:
     val_load_scan_max_num: 10
 
   scene_verse_base: /hdd/caoyuhao/3D_data/g3d-lf/SceneVerse
-  embodied_base: /hdd/caoyuhao/3D_data/MTU3D/embodied_scan_DINOv2_ViTL_518
+  embodied_base: /hdd/caoyuhao/3D_data/MTU3D/embodied_scan_DINOv3_ViTL_224
 
 # dataloader details
 dataloader:
   # This is a per-gpu batchsize
   batchsize: 16
   batchsize_eval: 1
-  num_workers: 1
-  prefetch_factor: 2
+  num_workers: 0
+  # prefetch_factor: 2
   
 task: InstSeg
-data_wrapper: EmbodiedScanInstSegDatasetWrapper
+data_wrapper: EmbodiedScanInstSegDatasetWrapperSPconv
 
 # Training details
 trainer: EmbodiedStage1Trainer
@@ -103,7 +103,7 @@ eval:
   compute_loss_eval: False
 
 model:
-  name: EmbodiedPQ3DInstSegModel
+  name: EmbodiedPQ3DInstSegModelSPconv
   memories: [voxel, mv]
   hidden_size: 768
   init_query_by_feat: True
@@ -114,7 +114,7 @@ model:
     pairwise_rel_type: "center"
 
   voxel_encoder:
-    name: PCDMask3DSegLevelEncoder
+    name: Sonata3DSegLevelEncoder
     args:
       backbone_kwargs:
         config:
@@ -132,7 +132,7 @@ model:
   mv_encoder:
     name: ObjectEncoder
     args:
-      input_feat_size : 1024 #CLIP:1024 RADIO:1536 DINOv3-convnext:1024 DINOv2-vitb:768
+      input_feat_size : 1024 #CLIP:1024 RADIO:1536 DINOv3:1024
       hidden_size: ${model.hidden_size}
       use_projection: True
       use_cls_head: False
