--- a/configs/sonata_exp/sonata_small.yaml
+++ b/configs/sonata_exp/sonata_small.yaml
@@ -69,8 +69,8 @@ dataloader:
   # This is a per-gpu batchsize
   batchsize: 16
   batchsize_eval: 1
-  num_workers: 0
-  # prefetch_factor: 2
+  num_workers: 1
+  prefetch_factor: 2
   
 task: InstSeg
 data_wrapper: EmbodiedScanInstSegDatasetWrapperSPconv
@@ -83,7 +83,7 @@ solver:
   lr: 1e-4
   grad_norm: 80
   epochs: 60
-  epochs_per_eval: 10
+  epochs_per_eval: 5
   optim:
     name: AdamW
     args:
@@ -117,6 +117,7 @@ model:
     name: Sonata3DSegLevelEncoder
     args:
       backbone_kwargs:
+        sonata_version: "sonata_small" # "sonata" or "sonata_small"
         config:
           dialations: [ 1, 1, 1, 1 ]
           conv1_kernel_size: 5
