创建了如下新模块： EmbodiedSAMDecoder ：进行mask预测 EmbodiedCRTInstSegModel : 主干模型，进行mv和voxel和pts数据提取与准备 GeoAwarePooling：获取点云权重，通过几何特征进行特征池化与norm PCDMask3DSegLevelEncoder：包裹几何池化，提取超点特征和点云特征

--- a/cyh_eval/config.yaml
+++ b/cyh_eval/config.yaml
@@ -18,7 +18,7 @@ logger:
   name: wandb
   entity: cyh200206
   autoname: true
-  run_id: up7732kd
+  run_id: be5sp6kg
 data:
   train:
   - EmbodiedScanInstSegScanNet
