--- a/cyh_eval/config.yaml
+++ b/cyh_eval/config.yaml
@@ -18,7 +18,7 @@ logger:
   name: wandb
   entity: cyh200206
   autoname: true
-  run_id: be5sp6kg
+  run_id: nkwbo8bp
 data:
   train:
   - EmbodiedScanInstSegScanNet
